# auto-knowledge-base

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
docs/: design.md  knowledge-base-structure.md  llm-debugging.md  pipeline.mmd  requirements.md
src/auto_kb/: __init__.py  agent.py  cli.py  config.py  indexer.py  models.py  pipeline.py  utils.py
src/auto_knowledge_base/: __init__.py  cli.py  pipeline.py  search.py  storage.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_indexer.py  test_pipeline.py  test_storage.py  test_utils.py
