[project]
name = "auto-kb"
version = "0.1.0"
description = "Automated web data collection and local knowledge base builder (deepagents + langchain + langgraph)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
    "deepagents>=0.1",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
auto-kb = "auto_kb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
