[project]
name = "auto-knowledge-base"
version = "0.1.0"
description = "Automated web data collection and local knowledge base builder (deepagents + langchain + langgraph)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
    "deepagents>=0.1",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "pydantic>=2.7",
]

# PEP 735 dependency group: installed by default by `uv sync` / `uv run`,
# so `uv run pytest` works out of the box.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
auto-knowledge-base = "auto_knowledge_base.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_knowledge_base"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
